src/objects/Incident__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrested_suspect_s__c</fullName>
        <label>Arrested suspect(s)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Basis_for_Full_Search_Narrative__c</fullName>
        <label>Basis for Full Search Narrative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basis_for_Full_Search__c</fullName>
        <label>Basis for Full Search</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admitted to weapon</fullName>
                </value>
                <value>
                    <fullName>Felt/observed object resembling weapon</fullName>
                </value>
                <value>
                    <fullName>Incident to arrest</fullName>
                </value>
                <value>
                    <fullName>Consent</fullName>
                </value>
                <value>
                    <fullName>Other (describe)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Basis_for_Pat_Down_Narrative__c</fullName>
        <label>Basis for Pat Down Narrative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basis_for_Pat_Down__c</fullName>
        <label>Basis for Pat Down</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verbal threats of violence</fullName>
                </value>
                <value>
                    <fullName>Knowledge of weapon/prior violence</fullName>
                </value>
                <value>
                    <fullName>Actions indicative of violence</fullName>
                </value>
                <value>
                    <fullName>Violent crime suspected</fullName>
                </value>
                <value>
                    <fullName>Suspicious bulge</fullName>
                </value>
                <value>
                    <fullName>Search incident to arrest</fullName>
                </value>
                <value>
                    <fullName>Suspicion of weapon (describe)</fullName>
                </value>
                <value>
                    <fullName>Other (describe)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <label>Contact Count</label>
        <summaryForeignKey>Incident_Contact__c.Incident__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Driver</fullName>
                </value>
                <value>
                    <fullName>Passenger</fullName>
                </value>
                <value>
                    <fullName>Pedestrian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>District 1</fullName>
                </value>
                <value>
                    <fullName>District 2</fullName>
                </value>
                <value>
                    <fullName>District 3</fullName>
                </value>
                <value>
                    <fullName>District 4</fullName>
                </value>
                <value>
                    <fullName>District 5</fullName>
                </value>
                <value>
                    <fullName>District 6</fullName>
                </value>
                <value>
                    <fullName>District 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_of_Contact__c</fullName>
        <label>Duration of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;5 Min</fullName>
                </value>
                <value>
                    <fullName>5-9 Min</fullName>
                </value>
                <value>
                    <fullName>10-19 Min</fullName>
                </value>
                <value>
                    <fullName>20-29 Min</fullName>
                </value>
                <value>
                    <fullName>30-39 Min</fullName>
                </value>
                <value>
                    <fullName>40-49 Min</fullName>
                </value>
                <value>
                    <fullName>50-59 Min</fullName>
                </value>
                <value>
                    <fullName>&gt;60 Min</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edit_Link__c</fullName>
        <formula>HYPERLINK(
  IF(
      CONTAINS($Api.Partner_Server_URL_260, &apos;visual&apos;), 
      &apos;https://&apos;+
      MID($Api.Partner_Server_URL_260, FIND( &apos;visual&apos;, $Api.Partner_Server_URL_260)-4,4)
      +&apos;salesforce.com/&apos;,
      LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
  ) + &apos;s/contact-card?id=&apos;+ CASESAFEID(Id) , 
  &apos;Open Record&apos;,&apos;_self&apos;

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foot_Pursuit__c</fullName>
        <label>Foot Pursuit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Search__c</fullName>
        <label>Full Search</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Date_Time__c</fullName>
        <label>Incident Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Issued_Summons__c</fullName>
        <label>Issued Summons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Num_Officers_Involved__c</fullName>
        <label># Officers Involved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>&gt;5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Num_of_Subjects__c</fullName>
        <label># of Subjects</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>&gt;5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Observation_Notes__c</fullName>
        <label>Observation Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Officer_Badge_Number__c</fullName>
        <label>Officer Badge Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Officer_in_Uniform__c</fullName>
        <label>Officer in Uniform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pat_Down__c</fullName>
        <label>Pat Down</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Narrative__c</fullName>
        <label>Reason Narrative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Traffic Violation</fullName>
                </value>
                <value>
                    <fullName>Equipment Violation</fullName>
                </value>
                <value>
                    <fullName>Casing a victim or location</fullName>
                </value>
                <value>
                    <fullName>Actions indicative of a drug transaction</fullName>
                </value>
                <value>
                    <fullName>Actions of engaging in a violent crime</fullName>
                </value>
                <value>
                    <fullName>Fits description of a suspect</fullName>
                </value>
                <value>
                    <fullName>Proximity to reported crime location</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siezed_Contraband__c</fullName>
        <label>Seized Contraband</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Contraband__c</fullName>
        <label>Type of Contraband</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Narcotics</fullName>
                </value>
                <value>
                    <fullName>Firearm</fullName>
                </value>
                <value>
                    <fullName>Other Weapon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Pursuit__c</fullName>
        <label>Vehicle Pursuit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave_Data__c</fullName>
        <label>Wave Data</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reason__c</columns>
        <columns>Contact_Count__c</columns>
        <columns>District__c</columns>
        <columns>Officer_Badge_Number__c</columns>
        <columns>Vehicle_Pursuit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mobile</fullName>
        <columns>NAME</columns>
        <columns>Reason__c</columns>
        <columns>Contact_Count__c</columns>
        <columns>District__c</columns>
        <columns>Officer_Badge_Number__c</columns>
        <columns>Edit_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>Mobile</label>
    </listViews>
    <nameField>
        <displayFormat>ICD-{00000000}</displayFormat>
        <label>Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>